shelter/assets/sass/style.css
/* ... */
.donation_content {
  display: flex;
  flex-direction: column;
  gap: 19px;
}
@media (max-width: 380px) {
  .donation_content {
    gap: 23px;
  }
}

.donation_card {
  display: flex;
  width: 349px;
  padding: 10px 15px;
  background: #F1CDB3;
  border-radius: 10px;
}
@media (max-width: 380px) {
  .donation_card {
    width: 281px;
  }
}

.donation_icon {
  margin: 0 15px 0 0;
}

.footer {
  background: url(../../images/background/noise_transparent.png), radial-gradient(110.67% 538.64% at 5.73% 50%, #513D2F 0%, #1A1A1C 100%);
}

.footer_container {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  padding-top: 40px;
}
@media (max-width: 768px) {
  .footer_container {
    justify-content: center;
    gap: 64px 60px;
    padding-top: 13px;
  }
}
@media (max-width: 380px) {
  .footer_container {
    gap: 22px;
    padding-top: 9px;
  }
}

.footer_column {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  max-width: 302px;
  height: 234px;
  margin-top: 19px;
}
@media (max-width: 380px) {
  .footer_column {
    height: 221px;
  }
}

.column-1 {
  max-width: 280px;
}
@media (max-width: 380px) {
  .column-1 {
    height: 208px;
    align-items: center;
  }
}

.footer_title {
  color: #FFFFFF;
}
@media (max-width: 380px) {
  .footer_title {
    max-width: 270px;
    margin: 0 auto;
    align-items: center;
  }
}

.footer_link {
  display: flex;
  align-items: center;
}

.footer_link_left {
  text-align: left;
}

.footer_icon {
  margin: 0 20px 0 0;
}

.footer_link_text {
  color: #F1CDB3;
}
@media (max-width: 380px) {
  .footer_link_text {
    font-size: 20px;
  }
}

.footer_img {
  max-height: 310px;
}
@media (max-width: 380px) {
  .footer_img {
    margin-top: 19px;
  }
  .footer_img > img {
    width: 260px;
  }
}

.button {
  display: block;
  padding: 15px 45px;
  font-family: "Georgia", serif;
  font-size: 17px;
  line-height: 21.1px;
  font-weight: 400;
  letter-spacing: 1px;
  color: #292929;
  background: #FFFFFF;
  border: 2px solid #F1CDB3;
  border-radius: 100px;
  cursor: pointer;
  transition: all 0.5s ease-out;
}
.button:hover {
  background: #FDDCC4;
  border: 2px solid #FDDCC4;
}

.button_control {
  width: 52px;
  height: 52px;
  background: #FAFAFA;
  border: 2px solid #F1CDB3;
  border-radius: 100px;
  cursor: pointer;
  transition: all 0.3s ease-out;
}
.button_control:hover {
  background: #FDDCC4;
  border: 0 solid #FDDCC4;
}
.button_control:disabled {
  border: 2px solid #CDCDCD;
  pointer-events: none;
}

.button_colored {
  background: #F1CDB3;
  border: 0px solid #F1CDB3;
  transition: all 0.2s ease-out;
}
.button_colored:hover {
  background: #FDDCC4;
  border: 0 solid #FDDCC4;
}

.burger {
  display: none;
}
@media (max-width: 767px) {
  .burger {
    display: block;
    width: 30px;
    height: 30px;
    transition: all 0.5s;
  }
  .burger_open {
    transform: rotate(90deg);
  }
}
.burger_line {
  display: block;
  width: 100%;
  height: 2px;
  margin: 5px 0 8px 0;
  background: #F1CDB3;
}
.burger_line_dark {
  background: #000000;
}

.title_center {
  padding: 80px 0 0;
  text-align: center;
}
@media (max-width: 380px) {
  .title_center {
    padding: 41px 0 0;
  }
}

.slider {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: nowrap;
  gap: 53px;
  margin: 60px 0 60px;
}
@media (max-width: 1200px) {
  .slider {
    gap: 12px;
  }
}
@media (max-width: 707px) {
  .slider {
    flex-wrap: wrap;
    justify-content: space-evenly;
    gap: 19px;
    margin: 42px 0 42px;
  }
}

.slider_container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  max-width: 990px;
  overflow: hidden;
}
@media (max-width: 1200px) {
  .slider_container {
    max-width: 580px;
  }
}
@media (max-width: 707px) {
  .slider_container {
    max-width: 270px;
  }
}

.slider_line {
  position: relative;
  left: 0;
  display: flex;
  gap: 90px;
  max-width: 2250px;
}
@media (max-width: 1200px) {
  .slider_line {
    gap: 40px;
  }
}

.slide {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 30px;
  height: 435px;
  background: #FAFAFA;
  border-radius: 9px;
  cursor: pointer;
  transition: all 0.3s ease-out;
}
.slide:hover {
  background: #FFFFFF;
  box-shadow: 0px 2px 35px 14px rgba(13, 13, 13, 0.0392156863);
}
.slide:hover .button {
  background: #FDDCC4;
  border: 2px solid #FDDCC4;
}

.slide_img {
  height: 270px;
}

.slider_control_prev {
  order: -1;
}
@media (max-width: 707px) {
  .slider_control_prev {
    order: 0;
  }
}

.pagination {
  display: flex;
  justify-content: center;
  gap: 20px;
}

.pagination_content {
  font-family: "Georgia", serif;
  font-size: 20px;
  line-height: 23px;
  font-weight: 400;
  /*   background: $color-background; */
}

.text_xs {
  width: 380px;
  font-size: 12px;
  font-style: italic;
  line-height: 18px;
  color: #B2B2B2;
}
@media (max-width: 380px) {
  .text_xs {
    width: 280px;
    text-align: justify;
  }
}

@media (max-width: 768px) {
  .pets_not_only {
    padding-bottom: 75px;
  }
}
@media (max-width: 380px) {
  .pets_not_only {
    padding-bottom: 45px;
  }
}

.friends_list {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  gap: 30px 40px;
  margin: 60px 0 60px;
}
@media (max-width: 768px) {
  .friends_list {
    margin: 30px 0 40px;
  }
}
@media (max-width: 380px) {
  .friends_list {
    margin-top: 43px;
  }
}

.friends_item {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 30px;
  height: 435px;
  background: #FAFAFA;
  border-radius: 9px;
  cursor: pointer;
  transition: all 0.3s ease-out;
}
.friends_item:hover {
  background: #FFFFFF;
  box-shadow: 0px 2px 35px 14px rgba(13, 13, 13, 0.0392156863);
}
.friends_item:hover .button {
  background: #FDDCC4;
  border: 2px solid #FDDCC4;
}

@media (max-width: 768px) {
  .friends_item-hidden-tablet {
    display: none;
  }
}
/* ... */

